# Flow_Map_Distillation

./: .gitignore  README.md  pyproject.toml
scripts/: run_mnist.py  run_toy.py
src/freeflow/: __init__.py  common.py  io.py
src/freeflow/mnist/: __init__.py  checkpoints.py  config.py  data.py  evaluation.py  experiment.py  models.py  plots.py  training.py
src/freeflow/toy/: __init__.py  config.py  data.py  evaluation.py  experiment.py  models.py  plots.py  training.py
